src/regression_tests/snapshots/nixfmt_rs__regression_tests__parser__regression_update_right_associative.snap
---
source: src/regression_tests/parser.rs
description: "{a=1;} // {b=2;} // {c=3;}"
---
Operation
    [0;95;1m([0m Term
        [0;96;1m([0m Set Nothing
            [0;93;1m([0m Ann
                [0;35m{[0m preTrivia = fromList [0;36m[[0m[0;36m][0m
                [0;35m,[0m sourceLine = Pos [0;92;1m1[0m
                [0;35m,[0m value = TBraceOpen
                [0;35m,[0m trailComment = Nothing
                [0;35m}[0m
            [0;93;1m)[0m
            [0;93;1m[[0m Item
                [0;35m([0m Assignment
                    [0;36m[[0m Selector Nothing
                        [0;33m([0m IDSelector
                            [0;35;1m([0m Ann
                                [0;36;1m{[0m preTrivia = fromList [0;33;1m[[0m[0;33;1m][0m
                                [0;36;1m,[0m sourceLine = Pos [0;92;1m1[0m
                                [0;36;1m,[0m value = Identifier [0;97;1m"[0m[0;94;1ma[0m[0;97;1m"[0m
                                [0;36;1m,[0m trailComment = Nothing
                                [0;36;1m}[0m
                            [0;35;1m)[0m
                        [0;33m)[0m
                    [0;36m][0m
                    [0;36m([0m Ann
                        [0;33m{[0m preTrivia = fromList [0;35;1m[[0m[0;35;1m][0m
                        [0;33m,[0m sourceLine = Pos [0;92;1m1[0m
                        [0;33m,[0m value = TAssign
                        [0;33m,[0m trailComment = Nothing
                        [0;33m}[0m
                    [0;36m)[0m
                    [0;36m([0m Term
                        [0;33m([0m Token
                            [0;35;1m([0m Ann
                                [0;36;1m{[0m preTrivia = fromList [0;33;1m[[0m[0;33;1m][0m
                                [0;36;1m,[0m sourceLine = Pos [0;92;1m1[0m
                                [0;36;1m,[0m value = Integer [0;97;1m"[0m[0;94;1m1[0m[0;97;1m"[0m
                                [0;36;1m,[0m trailComment = Nothing
                                [0;36;1m}[0m
                            [0;35;1m)[0m
                        [0;33m)[0m
                    [0;36m)[0m
                    [0;36m([0m Ann
                        [0;33m{[0m preTrivia = fromList [0;35;1m[[0m[0;35;1m][0m
                        [0;33m,[0m sourceLine = Pos [0;92;1m1[0m
                        [0;33m,[0m value = TSemicolon
                        [0;33m,[0m trailComment = Nothing
                        [0;33m}[0m
                    [0;36m)[0m
                [0;35m)[0m
            [0;93;1m][0m
            [0;93;1m([0m Ann
                [0;35m{[0m preTrivia = fromList [0;36m[[0m[0;36m][0m
                [0;35m,[0m sourceLine = Pos [0;92;1m1[0m
                [0;35m,[0m value = TBraceClose
                [0;35m,[0m trailComment = Nothing
                [0;35m}[0m
            [0;93;1m)[0m
        [0;96;1m)[0m
    [0;95;1m)[0m
    [0;95;1m([0m Ann
        [0;96;1m{[0m preTrivia = fromList [0;93;1m[[0m[0;93;1m][0m
        [0;96;1m,[0m sourceLine = Pos [0;92;1m1[0m
        [0;96;1m,[0m value = TUpdate
        [0;96;1m,[0m trailComment = Nothing
        [0;96;1m}[0m
    [0;95;1m)[0m
    [0;95;1m([0m Operation
        [0;96;1m([0m Term
            [0;93;1m([0m Set Nothing
                [0;35m([0m Ann
                    [0;36m{[0m preTrivia = fromList [0;33m[[0m[0;33m][0m
                    [0;36m,[0m sourceLine = Pos [0;92;1m1[0m
                    [0;36m,[0m value = TBraceOpen
                    [0;36m,[0m trailComment = Nothing
                    [0;36m}[0m
                [0;35m)[0m
                [0;35m[[0m Item
                    [0;36m([0m Assignment
                        [0;33m[[0m Selector Nothing
                            [0;35;1m([0m IDSelector
                                [0;36;1m([0m Ann
                                    [0;33;1m{[0m preTrivia = fromList [0;95m[[0m[0;95m][0m
                                    [0;33;1m,[0m sourceLine = Pos [0;92;1m1[0m
                                    [0;33;1m,[0m value = Identifier [0;97;1m"[0m[0;94;1mb[0m[0;97;1m"[0m
                                    [0;33;1m,[0m trailComment = Nothing
                                    [0;33;1m}[0m
                                [0;36;1m)[0m
                            [0;35;1m)[0m
                        [0;33m][0m
                        [0;33m([0m Ann
                            [0;35;1m{[0m preTrivia = fromList [0;36;1m[[0m[0;36;1m][0m
                            [0;35;1m,[0m sourceLine = Pos [0;92;1m1[0m
                            [0;35;1m,[0m value = TAssign
                            [0;35;1m,[0m trailComment = Nothing
                            [0;35;1m}[0m
                        [0;33m)[0m
                        [0;33m([0m Term
                            [0;35;1m([0m Token
                                [0;36;1m([0m Ann
                                    [0;33;1m{[0m preTrivia = fromList [0;95m[[0m[0;95m][0m
                                    [0;33;1m,[0m sourceLine = Pos [0;92;1m1[0m
                                    [0;33;1m,[0m value = Integer [0;97;1m"[0m[0;94;1m2[0m[0;97;1m"[0m
                                    [0;33;1m,[0m trailComment = Nothing
                                    [0;33;1m}[0m
                                [0;36;1m)[0m
                            [0;35;1m)[0m
                        [0;33m)[0m
                        [0;33m([0m Ann
                            [0;35;1m{[0m preTrivia = fromList [0;36;1m[[0m[0;36;1m][0m
                            [0;35;1m,[0m sourceLine = Pos [0;92;1m1[0m
                            [0;35;1m,[0m value = TSemicolon
                            [0;35;1m,[0m trailComment = Nothing
                            [0;35;1m}[0m
                        [0;33m)[0m
                    [0;36m)[0m
                [0;35m][0m
                [0;35m([0m Ann
                    [0;36m{[0m preTrivia = fromList [0;33m[[0m[0;33m][0m
                    [0;36m,[0m sourceLine = Pos [0;92;1m1[0m
                    [0;36m,[0m value = TBraceClose
                    [0;36m,[0m trailComment = Nothing
                    [0;36m}[0m
                [0;35m)[0m
            [0;93;1m)[0m
        [0;96;1m)[0m
        [0;96;1m([0m Ann
            [0;93;1m{[0m preTrivia = fromList [0;35m[[0m[0;35m][0m
            [0;93;1m,[0m sourceLine = Pos [0;92;1m1[0m
            [0;93;1m,[0m value = TUpdate
            [0;93;1m,[0m trailComment = Nothing
            [0;93;1m}[0m
        [0;96;1m)[0m
        [0;96;1m([0m Term
            [0;93;1m([0m Set Nothing
                [0;35m([0m Ann
                    [0;36m{[0m preTrivia = fromList [0;33m[[0m[0;33m][0m
                    [0;36m,[0m sourceLine = Pos [0;92;1m1[0m
                    [0;36m,[0m value = TBraceOpen
                    [0;36m,[0m trailComment = Nothing
                    [0;36m}[0m
                [0;35m)[0m
                [0;35m[[0m Item
                    [0;36m([0m Assignment
                        [0;33m[[0m Selector Nothing
                            [0;35;1m([0m IDSelector
                                [0;36;1m([0m Ann
                                    [0;33;1m{[0m preTrivia = fromList [0;95m[[0m[0;95m][0m
                                    [0;33;1m,[0m sourceLine = Pos [0;92;1m1[0m
                                    [0;33;1m,[0m value = Identifier [0;97;1m"[0m[0;94;1mc[0m[0;97;1m"[0m
                                    [0;33;1m,[0m trailComment = Nothing
                                    [0;33;1m}[0m
                                [0;36;1m)[0m
                            [0;35;1m)[0m
                        [0;33m][0m
                        [0;33m([0m Ann
                            [0;35;1m{[0m preTrivia = fromList [0;36;1m[[0m[0;36;1m][0m
                            [0;35;1m,[0m sourceLine = Pos [0;92;1m1[0m
                            [0;35;1m,[0m value = TAssign
                            [0;35;1m,[0m trailComment = Nothing
                            [0;35;1m}[0m
                        [0;33m)[0m
                        [0;33m([0m Term
                            [0;35;1m([0m Token
                                [0;36;1m([0m Ann
                                    [0;33;1m{[0m preTrivia = fromList [0;95m[[0m[0;95m][0m
                                    [0;33;1m,[0m sourceLine = Pos [0;92;1m1[0m
                                    [0;33;1m,[0m value = Integer [0;97;1m"[0m[0;94;1m3[0m[0;97;1m"[0m
                                    [0;33;1m,[0m trailComment = Nothing
                                    [0;33;1m}[0m
                                [0;36;1m)[0m
                            [0;35;1m)[0m
                        [0;33m)[0m
                        [0;33m([0m Ann
                            [0;35;1m{[0m preTrivia = fromList [0;36;1m[[0m[0;36;1m][0m
                            [0;35;1m,[0m sourceLine = Pos [0;92;1m1[0m
                            [0;35;1m,[0m value = TSemicolon
                            [0;35;1m,[0m trailComment = Nothing
                            [0;35;1m}[0m
                        [0;33m)[0m
                    [0;36m)[0m
                [0;35m][0m
                [0;35m([0m Ann
                    [0;36m{[0m preTrivia = fromList [0;33m[[0m[0;33m][0m
                    [0;36m,[0m sourceLine = Pos [0;92;1m1[0m
                    [0;36m,[0m value = TBraceClose
                    [0;36m,[0m trailComment = Nothing
                    [0;36m}[0m
                [0;35m)[0m
            [0;93;1m)[0m
        [0;96;1m)[0m
    [0;95;1m)[0m
